[gd_scene load_steps=8 format=3 uid="uid://hht5fur6h4o5"]

[ext_resource type="Texture2D" uid="uid://yuhk08spe0c3" path="res://kenney_pixel-platformer (2)/Tiles/Characters/tile_0004.png" id="1_jo7o6"]
[ext_resource type="Script" path="res://player.gd" id="1_pae1b"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_tcjs2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_ya0jq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_xhmv8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_a6cyp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i12ip"]
height = 24.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_pae1b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_jo7o6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_i12ip")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_tcjs2")

[node name="Movement" type="Node" parent="StateChart"]
script = ExtResource("4_ya0jq")
initial_state = NodePath("Idle")

[node name="Air" type="Node" parent="StateChart/Movement"]
script = ExtResource("5_xhmv8")

[node name="to Running" type="Node" parent="StateChart/Movement/Air"]
script = ExtResource("6_a6cyp")
to = NodePath("../../Running")
event = &"Running"

[node name="Idle" type="Node" parent="StateChart/Movement"]
script = ExtResource("5_xhmv8")

[node name="to Air" type="Node" parent="StateChart/Movement/Idle"]
script = ExtResource("6_a6cyp")
to = NodePath("../../Air")
event = &"Air"

[node name="to Running" type="Node" parent="StateChart/Movement/Idle"]
script = ExtResource("6_a6cyp")
to = NodePath("../../Running")
event = &"Running"

[node name="Running" type="Node" parent="StateChart/Movement"]
script = ExtResource("5_xhmv8")

[node name="to Idle" type="Node" parent="StateChart/Movement/Running"]
script = ExtResource("6_a6cyp")
to = NodePath("../../Idle")
event = &"Idle"

[node name="to Air" type="Node" parent="StateChart/Movement/Running"]
script = ExtResource("6_a6cyp")
to = NodePath("../../Air")
event = &"Air"

[connection signal="state_physics_processing" from="StateChart/Movement/Air" to="." method="_on_air_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Movement/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Movement/Running" to="." method="_on_running_state_physics_processing"]
